fix column width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -115,11 +115,10 @@
 /* ============================================================================
    Media: small screens
 ============================================================================ */
-@media (max-width: 400px) {
+@media (max-width: 400px) and (hover: none) and (pointer: coarse) {
   .column {
     flex: 0 0 90vw;
-    max-width: 100vw;
-    width: 100vw;
-    padding-bottom: 20vh;
+    width: 90vw;
+    max-width: 90vw;
   }
 }
